Installed express and nodemon dependencies. #1

--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "eslint-plugin-standard": "3.0.1",
     "htmlhint": "0.9.13",
     "husky": "0.13.4",
+    "nodemon": "^1.11.0",
     "npm-run-all": "4.0.2",
     "stylelint": "7.10.1",
     "stylelint-config-standard": "16.0.0"
+  },
+  "dependencies": {
+    "express": "^4.15.3"
   }
 }
